src/test/ui/generics/generic-function-item-where-type.rs
fn foo<U>() {}

fn main() {
    foo::<main>()
    //~^ ERROR constant provided when a type was expected
}
